--- a/src/app/maps/pages/zoomrange/zoomrange.component.html
+++ b/src/app/maps/pages/zoomrange/zoomrange.component.html
@@ -1,1 +1,28 @@
-<p>zoomrange works!</p>
+<div #map class="map-container"></div>
+
+<div class="row">
+    <div class="col-12">
+        <label class="form-label">
+            Zoom: {{this.zoomLevel | number:'2.2-2'}}
+        </label>
+        <input type="range" 
+               class="form-range"
+               [value]="zoomLevel"
+               min="0"
+               max="18"
+               (input)="mapZoom('slide', zoomInput.value)"
+               #zoomInput>
+    </div>
+
+    <div class="col-12">
+        <button class="btn btn-primary"
+                (click)="mapZoom('out')">
+            -
+        </button>
+
+        <button class="btn btn-primary float-end"
+                (click)="mapZoom('in')">
+            +
+        </button>
+    </div>
+</div>
