--- a/src/app/maps/pages/zoomrange/zoomrange.component.html
+++ b/src/app/maps/pages/zoomrange/zoomrange.component.html
@@ -3,7 +3,8 @@
 <div class="row">
     <div class="col-12">
         <label class="form-label">
-            Zoom: {{this.zoomLevel | number:'2.2-2'}}
+            Zoom: {{this.zoomLevel | number:'2.2-2'}} - 
+            Coordenadas: [{{centerCoords[0] | number: '2.4-4'}}, {{centerCoords[1] | number: '2.4-4'}}]
         </label>
         <input type="range" 
                class="form-range"
